<resources>
    <string name="app_name">paddle organizer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_shuffle">Team Shuffle</string>
    <string name="tournament">Tournament</string>
    <string name="how_many_players">How many players?</string>
    <string name="max_20_people">Max 20 people</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="country">country</string>
    <string name="city">city</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
</resources>